--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "parcel examples/cats/index.html",
     "lint": "eslint .",
     "prettier": "prettier --write \"./**/*.{md,js,css}\" \"!./{build,dist}/**\" \"!./style.css*\"",
-    "prepublishOnly": "yarn run lint && yarn run test && yarn run build",
+    "prepublishOnly": "yarn run build",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "deploy": "yarn run build:demo && gh-pages -d build",
@@ -47,7 +47,8 @@
   ],
   "dependencies": {
     "prop-types": "^15.6.2",
-    "react-modal": "^3.11.1"
+    "react-modal": "^3.11.1",
+    "yarn": "^1.22.10"
   },
   "peerDependencies": {
     "react": "^16.x",
